# dlib_resnet_itk

./: .gitignore  CMakeLists.txt  README.md
src/: accuracy.cpp  accuracy.h  dlibITKConvert.h  dlibITKConvert.hpp  evaluate.h  io.cpp  io.h  main.cpp  resnet.h  struct.h  train.cpp  train.h  typedef.h
